REFACTOR: 파일 위치 찾기 방식 변경